# Lite3_dog

./: .gitignore  README.md  config.json  depth_guard_client.py  emotion_behavior_controller.py  gesture_control.py  main_controller1.py  main_gui.py  pyproject.toml  requirements-gui.txt  udp_client.py
gui/: __init__.py  control_panel.py  controller_worker.py  gui_bridge.py  log_panel.py  main_window.py  status_panel.py  theme.py  video_bridge.py  video_widget.py
gui/dialogs/: __init__.py  face_delete_dialog.py  face_register_dialog.py  settings_dialog.py
